# recursive-make

./: .gitignore  LICENSE  Makefile.am  README.md  configure.ac
debug/: Makefile  common_flags.sh  config.h  config.status  debug_configure
debug/src/: Makefile
debug/src/.deps/: hello.Po  main.Po
src/: Makefile.am  hello.c  main.c
