ACLOCAL_AMFLAGS = -I m4 --install

#for m4 be redistributed
EXTRA_DIST = m4/NOTES

# This is the top-level Makefile.am. It is normally very brief, and in this case
# is just an instruction to recurse into SUBDIRS and run make in each one.
# SUBDIRS is a space-separated list, and can use . to mean this directory, which
# is normally processed last.
SUBDIRS = src
